# src/api/docs/swagger.yaml
@@ -425,6 +425,43 @@ components:
           type: boolean
           description: "Whether the job application has been synced"
           example: true
+        id:
+          type: string
+          format: uuid
+          description: "The job uuid"
+        title:
+          type: string
+          example: "Dummy title"
+          description: "The title."
+          maxLength: 64
+        payment:
+          $ref: "#/components/schemas/Payment"
+        skills:
+          type: array
+          description: "The skills to filter the jobs"
+          items:
+            type: string
+            format: uuid
+        location:
+          type: string
+          example: "Any location"
+          description: "the location of job"
+        duration:
+          type: integer
+          example: 1
+          description: "The duration in weeks"
+        jobExternalId:
+          type: string
+          example: "51313517"
+          description: "The corresponding gig ID on rcrm"
+        jobTimezone:
+          type: string
+          default: ''
+          description: "the job timezone"
+        description:
+          type: string
+          default: ''
+          description: "The job detail description"
     Job:
       required:
         - id
@@ -494,7 +531,15 @@ components:
         jobExternalId:
           type: string
           example: "51313517"
-          description: "The corresponding gig ID on community app"
+          description: "The corresponding gig ID on rcrm"
+        jobTimezone:
+          type: string
+          default: ''
+          description: "the job timezone"
+        description:
+          type: string
+          default: ''
+          description: "The job detail description"
     JobApplication:
       required:
         - title
